--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://radiant-caverns-04970.herokuapp.com/"
+  "proxy": "https://gentle-lowlands-72383.herokuapp.com/"
 }
